syntax = "proto3";

package central;

import weak "google/api/annotations.proto";
import "google/protobuf/duration.proto";

option go_package = "./internalapi/central;central";

message GenerateTokenForPermissionsAndScopeRequest {
  repeated string read_permissions = 1;
  repeated RequestedRoleClusterScope cluster_scopes = 2;
  google.protobuf.Duration valid_for = 3;
}

message RequestedRoleClusterScope {
  string cluster_name = 1;
  bool full_cluster_access = 2;
  repeated string namespaces = 3;
}

message GenerateTokenForPermissionsAndScopeResponse {
  string token = 1;
}

service TokenService {
  rpc GenerateTokenForPermissionsAndScope(GenerateTokenForPermissionsAndScopeRequest) returns (GenerateTokenForPermissionsAndScopeResponse) {
    option (google.api.http) = {get: "/internal/v1/token"};
  }
}
